--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 <body>
     <label>
         Insert Image Here
-        <input type="file" accept="image/*" id="">
+        <input type="file" accept="image/*" id="input">
     </label>
     <div class="flex">
-        <div id="a0"></div>
+        <div id="r0"></div>
+        <div id="g0"></div>
         <div id="b0"></div>
-        <div id="c0"></div>
-        <div id="d0"></div>
-        <div id="a1"></div>
+        <div id="a0"></div>
+        <div id="r1"></div>
+        <div id="g1"></div>
         <div id="b1"></div>
-        <div id="c1"></div>
-        <div id="d1"></div>
+        <div id="a1"></div>
     </div>
 </body>
 </html>
