refined style, fixed 000a, added initialization test

--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <script src="./script.js"></script>
 </head>
 <body>
-    <label>
-        Insert Image Here
-        <input type="file" accept="image/*" id="input">
-    </label>
-    <div class="flex">
+    <input type="file" accept="image/*" id="input">
+    <div class="grid">
         <div id="r0"></div>
         <div id="g0"></div>
         <div id="b0"></div>
@@ -18,6 +15,16 @@
         <div id="g1"></div>
         <div id="b1"></div>
         <div id="a1"></div>
+        <div id="im"></div>
+        <div id="r0l"><span>RRR1</span></div>
+        <div id="g0l"><span>GGG1</span></div>
+        <div id="b0l"><span>BBB1</span></div>
+        <div id="a0l"><span>AAA1</span></div>
+        <div id="r1l"><span>R001</span></div>
+        <div id="g1l"><span>0G01</span></div>
+        <div id="b1l"><span>00B1</span></div>
+        <div id="a1l"><span>000A</span></div>
+        <div id="iml"><span>RGBA</span></div>
     </div>
 </body>
 </html>
