--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div id="g0l"><span>GGG1</span></div>
         <div id="b0l"><span>BBB1</span></div>
         <div id="a0l"><span>AAA1</span></div>
-        <div id="r1l"><span>R001</span></div>
-        <div id="g1l"><span>0G01</span></div>
-        <div id="b1l"><span>00B1</span></div>
+        <div id="r1l"><span>1GB1</span></div>
+        <div id="g1l"><span>R1B1</span></div>
+        <div id="b1l"><span>RG11</span></div>
         <div id="a1l"><span>000A</span></div>
         <div id="iml"><span>RGBA</span></div>
     </div>
