renamed ids, changed 000a to rgb1
000a is cooler to look at but it's redundant (with aaa1 there) and rgb1 is more useful

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 <body>
     <input type="file" accept="image/*,.dds" id="input">
     <div class="grid">
-        <div id="r0"></div>
-        <div id="g0"></div>
-        <div id="b0"></div>
-        <div id="a0"></div>
-        <div id="r1"></div>
-        <div id="g1"></div>
-        <div id="b1"></div>
-        <div id="a1"></div>
-        <div id="im"></div>
-        <div id="r0l"><span>RRR1</span></div>
-        <div id="g0l"><span>GGG1</span></div>
-        <div id="b0l"><span>BBB1</span></div>
-        <div id="a0l"><span>AAA1</span></div>
-        <div id="r1l"><span>1GB1</span></div>
-        <div id="g1l"><span>R1B1</span></div>
-        <div id="b1l"><span>RG11</span></div>
-        <div id="a1l"><span>000A</span></div>
-        <div id="iml"><span>RGBA</span></div>
+        <div id="r"></div>
+        <div id="g"></div>
+        <div id="b"></div>
+        <div id="a"></div>
+        <div id="gb"></div>
+        <div id="rb"></div>
+        <div id="rg"></div>
+        <div id="rgb"></div>
+        <div id="rgba"></div>
+        <div id="rl"><span>RRR1</span></div>
+        <div id="gl"><span>GGG1</span></div>
+        <div id="bl"><span>BBB1</span></div>
+        <div id="al"><span>AAA1</span></div>
+        <div id="gbl"><span>1GB1</span></div>
+        <div id="rbl"><span>R1B1</span></div>
+        <div id="rgl"><span>RG11</span></div>
+        <div id="rgbl"><span>RGB1</span></div>
+        <div id="rgbal"><span>RGBA</span></div>
     </div>
 </body>
 </html>
